<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <!-- A 'parent' preference, which enables/disables child preferences (below)
         when checked/unchecked. -->
    <SwitchPreference
        android:defaultValue="true"
        android:key="notifications_active"
        android:title="@string/pref_title_active_notifications" />

    <!-- Allows the user to choose a ringtone in the 'notification' category. -->
    <!-- NOTE: This preference will be enabled only when the checkbox above is checked. -->
    <!-- NOTE: RingtonePreference's summary should be set to its value by the activity code. -->
    <RingtonePreference
        android:defaultValue="content://settings/system/notification_sound"
        android:dependency="notifications_active"
        android:key="notifications_active_ringtone"
        android:ringtoneType="notification"
        android:title="@string/pref_title_ringtone" />

    <!-- NOTE: This preference will be enabled only when the checkbox above is checked. -->
    <SwitchPreference
        android:defaultValue="true"
        android:dependency="notifications_active"
        android:key="notifications_active_vibrate"
        android:title="@string/pref_title_vibrate" />

    <com.gabriel.gagnier.calculatricetemporel.util.notification.TimePreference
        android:key="timePref_Key"
        android:title="@string/pref_title_time_notifications"/>

    <com.gabriel.gagnier.calculatricetemporel.util.notification.NumberPreference
        android:key="numberPref_Key"
        android:title="@string/pref_title_number_notifications"/>



</PreferenceScreen>
